added checkboxes component

--- a/libs/demo-ui/src/lib/colours/colours.component.html
+++ b/libs/demo-ui/src/lib/colours/colours.component.html
@@ -4,8 +4,7 @@
   </div>
 </div>
 
-<hr />
-
+<hr>
 <div class="container">
   <table class="table">
     <thead>
@@ -16,47 +15,86 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="bg-primary text-white">
-        <th scope="row">Primary</th>
-        <td>#1080A6</td>
-        <td>PRIMARY (Indigo) Primary buttons, background, table, text, etc</td>
-      </tr>
-      <tr class="bg-secondary text-white">
-        <th scope="row">Secondary</th>
-        <td>#737373</td>
-        <td>
-          SECONDARY (Grayscale-700) Secondary buttons, background, table, text,
-          etc
-        </td>
-      </tr>
-      <tr class="bg-success text-white">
-        <th scope="row">Success</th>
-        <td>#118847</td>
-        <td>
-          SUCCESS (Green) Success icons / indicators, Success message text,
-          success banners
-        </td>
-      </tr>
-      <tr class="bg-danger text-white">
-        <th scope="row">Danger</th>
-        <td>#CD0000</td>
-        <td>DANGER (Red) Error message text, error banners</td>
-      </tr>
-      <tr class="bg-warning text-dark">
-        <th scope="row">Warning</th>
-        <td>#CD0000</td>
-        <td>WARNING (Yellow) Warning banners</td>
-      </tr>
-      <tr class="bg-light text-dark">
-        <th scope="row">Light</th>
-        <td>#FFFFFF</td>
-        <td>White Surface background Button text</td>
-      </tr>
-      <tr class="bg-dark text-white">
-        <th scope="row">Dark</th>
-        <td>#1A1A1A</td>
-        <td>BLACK Headings & Body Text</td>
-      </tr>
+        <tr class="bg-primary text-light">
+          <th scope="row">Primary</th>
+          <td>#1080A6</td>
+          <td>PRIMARY (Blue) Primary buttons, background, table, text, etc</td>
+        </tr>
+        <tr class="bg-secondary text-light">
+          <th scope="row">Secondary</th>
+          <td>#737373</td>
+          <td>SECONDARY (Gray-700) Secondary buttons, background, table, text, etc</td>
+        </tr>
+        <tr class="bg-success text-light">
+          <th scope="row">Success</th>
+          <td>#118847</td>
+          <td>SUCCESS (Green) Success icons / indicators, Success message text, success banners</td>
+        </tr>
+        <tr class="bg-danger text-light">
+          <th scope="row">Danger</th>
+          <td>#CD0000</td>
+          <td>DANGER (Red) Error message text, error banners</td>
+        </tr>
+        <tr class="bg-warning text-dark">
+          <th scope="row">Warning</th>
+          <td>#FFD440</td>
+          <td>WARNING (Yellow) Warning banners</td>
+        </tr>
+        <tr class="bg-light text-dark">
+          <th scope="row">Light</th>
+          <td>#FFFFFF</td>
+          <td>LIGHT (White) Surface background, Button text</td>
+        </tr>
+        <tr class="bg-dark text-light">
+          <th scope="row">Dark</th>
+          <td>#1A1A1A</td>
+          <td>DARK (BLACK) Surface background, Headings & Body Text</td>
+        </tr>
+        <tr class="bg-light text-dark">
+          <th scope="row"></th>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="bg-success-light text-dark">
+          <th scope="row">Succuss Light</th>
+          <td>#E5F0E9</td>
+          <td>SUCCESS LIGHT (Green light) Surface background</td>
+        </tr>
+        <tr class="bg-warning-light text-dark">
+          <th scope="row">Warning Light</th>
+          <td>#FCEFF0</td>
+          <td>WARNING LIGHT (Yellow light) Surface background</td>
+        </tr>
+        <tr class="bg-danger-light text-dark">
+          <th scope="row">Danger Light</th>
+          <td>#FEF6DC</td>
+          <td>DANGER LIGHT (Red light)  Surface background</td>
+        </tr>
+        <tr class="bg-light text-dark">
+          <th scope="row"></th>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="bg-primary-light-1 text-dark">
+          <th scope="row">Primary Light-1</th>
+          <td>#F2FCFC</td>
+          <td>PRIMARY Light-1 (Blue light 1) Surface background</td>
+        </tr>
+        <tr class="bg-primary-light-2 text-dark">
+          <th scope="row">Primary Light-2</th>
+          <td>#E2F6F8</td>
+          <td>PRIMARY Light-2 (Blue light 2) Surface background</td>
+        </tr>
+        <tr class="bg-primary-dark-1 text-light">
+          <th scope="row">Primary Dark-1</th>
+          <td>#006186</td>
+          <td>PRIMARY Dark-1 (Blue dark 1)  Surface background</td>
+        </tr>
+        <tr class="bg-primary-dark-2 text-light">
+          <th scope="row">Primary Dark-2</th>
+          <td>#004763</td>
+          <td>PRIMARY Dark-2 (Blue dark 2)  Surface background</td>
+        </tr>
     </tbody>
   </table>
 </div>
