--- a/libs/demo-ui/src/lib/home/home.component.html
+++ b/libs/demo-ui/src/lib/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<h1>ONE design system - release notes</h1>
+			<h1>ONE Design System 2.0</h1>
 		</div>
 	</div>
 	<div class="row">
@@ -87,7 +87,7 @@
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
 				<a routerLink="/home#5">
-					InputText
+					Input Text
 				</a>
 			</div>
 		</div>
@@ -108,27 +108,27 @@
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
 				<a routerLink="/home#9">
-					Date
+					Date Picker
 				</a>
 			</div>
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
 				<a routerLink="/home#8">
-					Combo Box
+					Time Picker
 				</a>
 			</div>
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
 				<a routerLink="/home#9">
-					Date
+					Combo Box
 				</a>
 			</div>
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
-				<a routerLink="/home#10">
+				<a routerLink="/checkboxes">
 					Checkboxes
 				</a>
 			</div>
@@ -157,7 +157,7 @@
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
 				<a routerLink="/home#14">
-					Selection ButtonGroup
+					Selection Button Group
 				</a>
 			</div>
 		</div>
@@ -199,7 +199,7 @@
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
 				<a routerLink="/home#20">
-					FileUpload
+					File Upload
 				</a>
 			</div>
 		</div>
