--- a/libs/demo-ui/src/lib/grids/grids.component.html
+++ b/libs/demo-ui/src/lib/grids/grids.component.html
@@ -1,19 +1,31 @@
 <h1 class="mb-5">Grids and pagination</h1>
 
+<!--<hr>-->
+
+<!--<dino-spikes-nx-lib-grid>-->
+
+<!--</dino-spikes-nx-lib-grid>-->
 <div class="grid-container">
   <div class="grid-group">
-    <ag-grid-angular
-      #agGrid1
-      style="width: 100%; height: 300px"
-      id="myGrid2"
-      class="ag-theme-alpine"
-      [columnDefs]="columnDefs1"
-      [defaultColDef]="defaultColDef1"
-      [rowSelection]="rowSelection1"
-      [rowData]="rowData1"
-      (selectionChanged)="onSelectionChanged($event)"
-      (gridReady)="onGridReady1($event)"
-    ></ag-grid-angular>
+<!--    <ag-grid-angular-->
+<!--      style="height:200px;overflow: auto;"-->
+<!--      class="ag-theme-alpine"-->
+<!--      [rowData]="rowData"-->
+<!--      [columnDefs]="columnDefs">-->
+<!--    </ag-grid-angular>-->
+
+      <ag-grid-angular
+        #agGrid1
+        style="width: 100%; height: 300px;"
+        id="myGrid2"
+        class="ag-theme-alpine"
+        [columnDefs]="columnDefs1"
+        [defaultColDef]="defaultColDef1"
+        [rowSelection]="rowSelection1"
+        [rowData]="rowData1"
+        (selectionChanged)="onSelectionChanged($event)"
+        (gridReady)="onGridReady1($event)"
+      ></ag-grid-angular>
   </div>
 
   <div class="grid-group">
@@ -37,4 +49,13 @@
       (gridReady)="onGridReady($event)"
     ></ag-grid-angular>
   </div>
+
 </div>
+
+
+
+
+
+
+
+
