--- a/libs/one-ux/scss/_overrides.scss
+++ b/libs/one-ux/scss/_overrides.scss
@@ -1,8 +1,35 @@
 // Custom Variables
 
-$rex-font-family-sans-serif-heading: "Raleway","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif !default;
+//$rex-font-family-sans-serif-heading: "Raleway","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif !default;
 
 // End of Custom Variables
 
 // Override default bootstrap fonts with fonts used by ONE DS 2.0
-$font-family-sans-serif: "Open Sans",Helvetica,Arial,sans-serif !default;
+//$font-family-sans-serif: "Open Sans",Helvetica,Arial,sans-serif !default;
+
+
+@import "./scss/variables/typography";
+@import "./scss/variables/colours";
+@import "./scss/variables/checkboxes";
+
+
+
+$font-onds-enabled: true !default;
+
+@if ($font-onds-enabled == true) {
+	$font-family-sans-serif: "Open Sans",Helvetica,Arial,sans-serif !default;
+	$font-family-base: $font-family-sans-serif !default;
+	$font-family-sans-serif-heading: "Raleway","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif !default;
+}
+
+$font-family-base: "Open Sans",Helvetica,Arial,sans-serif !default;
+$font-family-sans-serif-heading: "Helvetica Neue",Helvetica,Arial,sans-serif !default;
+$font-family-sans-serif: "Open Sans",Helvetica,Arial,sans-serif !default ;
+
+$rex-round-button-enabled: true !default;
+
+@if ($rex-round-button-enabled == true) {
+	$rex-round-button: 4px;
+} @else {
+	$rex-round-button: 0px;
+}
