added selection controls

--- a/libs/demo-ui/src/lib/home/home.component.html
+++ b/libs/demo-ui/src/lib/home/home.component.html
@@ -135,14 +135,14 @@
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
-				<a routerLink="/home#11">
+				<a routerLink="/radio">
 					Radio
 				</a>
 			</div>
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
-				<a routerLink="/home#12">
+				<a routerLink="/switch">
 					Switch
 				</a>
 			</div>
