--- a/libs/one-ux/scss/variables/_checkboxes.scss
+++ b/libs/one-ux/scss/variables/_checkboxes.scss
@@ -1,31 +1,37 @@
-$component-active-color:      $white !default;
-$component-active-bg:         $primary !default;
+$rex-round-check:                       0.25em;
+$component-active-color:                $white !default;
+$component-active-bg:                   $primary !default;
+$input-focus-border-color:              tint-color($component-active-bg, 90%) !default; //tint-color($component-active-bg, 50%) !default;
 
 
-$form-check-input-width:                  1em *2; //1em
-$form-check-min-height:                   $font-size-base * $line-height-base *2;
-$form-check-padding-start:                ($form-check-input-width + (0.5em / 2))*1.25;//$form-check-input-width + 0.5em
-$form-check-margin-bottom:                .125rem;//0/125rem
+$form-check-input-width:                  1em *1.5; //1em
+$form-check-min-height:                   $font-size-base * $line-height-base *1.5;//$font-size-base * $line-height-base
+$form-check-padding-start:                ($form-check-input-width + (0.5em / 1.5))*1.5;//$form-check-input-width + 0.5em
+$form-check-margin-bottom:                .125rem;//0.125rem
 $form-check-label-color:                  null;
 $form-check-label-cursor:                 null;
 $form-check-transition:                   null;
 
-$form-check-input-active-filter:          brightness(90%);
+
+$form-check-input-active-filter:          0;
+//$form-check-input-active-filter:          brightness(90%);
 
 
 //$form-check-input-bg:                     $input-bg;
 $form-check-input-border:                 1px solid rgba($black, .25);
-$form-check-input-border-radius:          .25em;
+$form-check-input-border-radius:          $rex-round-check;//.25em; 
 $form-check-radio-border-radius:          50%;
-//$form-check-input-focus-border:           $input-focus-border-color;
+$form-check-input-focus-border:           $input-focus-border-color;
 //$form-check-input-focus-box-shadow:       $input-btn-focus-box-shadow;
+
 
 $form-check-input-checked-color:          $component-active-color;
 $form-check-input-checked-bg-color:       $component-active-bg;
+
 $form-check-input-checked-border-color:   $form-check-input-checked-bg-color;
 
 $form-check-input-checked-bg-image:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$form-check-input-checked-color}' stroke-linecap='square' stroke-linejoin='square' stroke-width='3' d='M6 10l3 3l6-6'/></svg>");
-$form-check-radio-checked-bg-image:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='#{$form-check-input-checked-color}'/></svg>");
+$form-check-radio-checked-bg-image:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='#{$form-check-input-checked-bg-color}'/></svg>");
 
 //$form-check-input-checked-bg-image:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$form-check-input-checked-color}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/></svg>");
 //$form-check-radio-checked-bg-image:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='#{$form-check-input-checked-color}'/></svg>");
@@ -35,8 +41,8 @@ $form-check-radio-checked-bg-image:       url("data:image/svg+xml,<svg xmlns='ht
 //$form-check-input-indeterminate-border-color:   $form-check-input-indeterminate-bg-color;
 //$form-check-input-indeterminate-bg-image:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$form-check-input-indeterminate-color}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/></svg>");
 
-$form-check-input-disabled-opacity:        .5;
-$form-check-label-disabled-opacity:        $form-check-input-disabled-opacity;
+//$form-check-input-disabled-opacity:        .5;
+//$form-check-label-disabled-opacity:        $form-check-input-disabled-opacity;
 //$form-check-btn-check-disabled-opacity:    $btn-disabled-opacity;
 
-$form-check-inline-margin-end:    1.25rem;//1 rem
+$form-check-inline-margin-end:    1rem;//1 rem
