--- a/libs/demo-ui/src/lib/radio/radio.component.html
+++ b/libs/demo-ui/src/lib/radio/radio.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-      <h1 id="radio">Radio</h1>
+      <h1 id="radio">Radio (WIP)</h1>
     </div>
   </div>
   
@@ -24,12 +24,14 @@
           Disabled radio
         </label>
       </div>
+      <!--
       <div class="form-check">
         <input class="form-check-input" type="radio" name="flexRadioDisabled" id="flexRadioCheckedDisabled" checked disabled>
         <label class="form-check-label" for="flexRadioCheckedDisabled">
           Disabled checked radio
         </label>
       </div>
+      -->
 </div>
 
 
