--- a/libs/demo-ui/src/lib/switch/switch.component.html
+++ b/libs/demo-ui/src/lib/switch/switch.component.html
@@ -1,11 +1,12 @@
 <div class="container">
     <div class="row">
-      <h1 id="switch">Switch</h1>
+      <h1 id="switch">Switch (WIP)</h1>
     </div>
   </div>
   
 <hr>
 <div class="container">
+    <!--
     <div class="form-check form-switch">
         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
         <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
@@ -22,5 +23,6 @@
         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCheckedDisabled" checked disabled>
         <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Disabled checked switch checkbox input</label>
       </div>
+    -->
 </div>
 
