--- a/libs/one-ux/scss/_ag-grid.scss
+++ b/libs/one-ux/scss/_ag-grid.scss
@@ -1,6 +1,6 @@
 @import "~ag-grid-community/src/styles/ag-grid.scss";
 @import "~ag-grid-community/src/styles/ag-theme-alpine/sass/_ag-theme-alpine-mixin.scss";
-@import "../overrides.scss";
+@import "overrides.scss";
 
 .ag-theme-alpine {
   @include ag-theme-alpine((
