--- a/libs/one-ui/src/lib/datepicker/datepicker.component.html
+++ b/libs/one-ui/src/lib/datepicker/datepicker.component.html
@@ -1,1 +1,10 @@
-<p>datepicker works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-12 col-md-4 form-group">
+      <input type="text"
+             placeholder="Datepicker"
+             class="form-control"
+             bsDatepicker>
+    </div>
+  </div>
+</div>
