--- a/libs/demo-ui/src/lib/typeaheads/typeaheads.component.scss
+++ b/libs/demo-ui/src/lib/typeaheads/typeaheads.component.scss
@@ -1,3 +1,14 @@
 .section {
   margin-bottom: 30px;
 }
+.isitem {
+  display: inline;
+}
+
+.borderless {
+  border: none;
+}
+.groupheader {
+  font-weight: bold;
+  text-decoration: underline;
+}
